import 'package:expenses_tracker/model/category_model.dart';
import 'package:flutter/material.dart';

final List<Category> categories = [
  Category(id: 1, title: 'Food', icon: Icons.fastfood),
  Category(id: 2, title: 'Travel', icon: Icons.flight),
  Category(id: 3, title: 'Shopping', icon: Icons.shopping_cart),
  Category(id: 4, title: 'Education', icon: Icons.school),
  Category(id: 5, title: 'Health', icon: Icons.local_hospital),
  Category(id: 6, title: 'Other', icon: Icons.category),
];
const applogo = 'assets/icons/icon.png';
