...

      emit(ExpenseLoading());

      // Add the expense to the database
      await expenseRepository.save(event.expense.toMap());

      emit(ExpenseSuccess("Expense added successfully"));
      // Navigate to home screen and reload expenses
      event.context.read<ExpenseBloc>().add(FilterExpensesByDate(
          DateFormat('dd-MM-yyyy').format(DateTime.now())));
      Navigator.of(event.context).pushReplacementNamed('/main');
    } catch (e) {
      emit(ExpenseError("Failed to add expense: ${e.toString()}"));
...
